--- a/package.json
+++ b/package.json
@@ -12,14 +12,17 @@
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.4.0",
     "@react-three/postprocessing": "^3.0.4",
+    "@types/leaflet": "^1.9.21",
     "@vercel/analytics": "^1.6.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.24",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.554.0",
     "next": "^16.1.6",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-leaflet": "^5.0.0",
     "tailwind-merge": "^3.4.0",
     "three": "^0.181.2"
   },
